--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,19 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
+    "start": "ts-node-dev src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "prisma": "^4.3.1",
     "typescript": "^4.8.3"
   }
 }
