--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.3.1",
-    "express": "^4.18.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "prisma": "^4.3.1",
     "typescript": "^4.8.3"
